Fix css and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,45 @@
+html {
+  font-family: "Open Sans", sans-serif;
+  background-color: #f2f2f2;
+}
+
+h1 {
+  border-bottom: 1px solid #000;
+}
+
 .bord {
   border-color: #000;
+}
+
+.btn {
+  background-color: #000;
+  color: #fff;
+}
+
+.form {
+  background-color: #fff;
+}
+
+.btn:hover {
+  background-color: #f2f2f2;
+}
+
+.box {
+  border-color: #000;
+}
+
+@media only screen and (min-width: 60em) {
+
+  .name {
+    padding-right: 1rem;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  .name {
+    padding-right: 1rem;
+  }
+
 }
